--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ BASHRC=./config/.bashrc
 MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
 MYSQL_ROOT_PASSWORD=borming
+
+OPENSSL_DIR=""
+MYSQL_CONF_FILE=""
