--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
 MYSQL_ROOT_PASSWORD=borming
 
-OPENSSL_DIR=""
-MYSQL_CONF_FILE=""
+OPENSSL_DIR=./config/openssl
+MYSQL_CONF_FILE=./config/mysql
