--- a/config/mysql/my.cnf
+++ b/config/mysql/my.cnf
@@ -162,8 +162,7 @@ innodb_flush_method	= O_DIRECT
 #innodb_autoinc_lock_mode=2
 #
 # Allow server to accept connections on all interfaces.
-#
-#bind-address=0.0.0.0
+bind-address=0.0.0.0
 #
 # Optional setting
 #wsrep_slave_threads=1
