--- a/config/php7.3/vhosts/default.conf
+++ b/config/php7.3/vhosts/default.conf
@@ -268,3 +268,14 @@
 	DocumentRoot "/var/www/html/Projects/Fiskalizacija"
 </VirtualHost>
 
+<VirtualHost *:80>
+	<Directory /var/www/html/Projects/DPD/CPM/_TEST>
+		Require all granted
+		Options FollowSymlinks MultiViews
+		AllowOverride all
+	</Directory>
+	ServerName "www.cpm.test"
+	ServerAlias "cpm.test"
+	DocumentRoot "/var/www/html/Projects/DPD/CPM/_TEST"
+</VirtualHost>
+
